--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -35,7 +35,7 @@
 
 
 
-        <input type="submit" value="Submit User Signup Information" />
+        <input type="submit" value="Submit" />
     </form>
 </body>
 </html>
